# cfn-error-detector

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  cfn-error-detector  mypy.ini  pyproject.toml
src/cfn_error_detector/: __init__.py  aws.py  cache.py  cli.py  detector.py  path_finder.py
